--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,8 +9,8 @@
   },
   "XenaProvider": {
     "Authority": "https://login.xena.biz",
-    "CallBackUrl": "http://localhost:5002",
+    "CallBackUrl": "http://10.0.75.2:5007",  //Mostly used for docker support! It's easy to forget...and kinda hard to figure out whats wrong!
     "ClientID": "testclient",
-    "ClientSecret": "secret" 
+    "ClientSecret": "secret"
   }
 }
