Adding readme content and a few comments in the code...

--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56853/",
+      "applicationUrl": "http://localhost:5002/",
       "sslPort": 0
     }
   },
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Test.Client": {
+    "ExampleProject": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5002",
